--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
     </div>
 
     <div id="tools">
-
+        <input type="color" id="colorPicker">
+        <button id="pencilButton">Pencil</button>
+        <button id="eraserButton">Eraser</button>
+        <button id="rainbowButton">Rainbow</button>
+        <button id="shadowButton">Shadow</button>
+        <div>
+            <p id="rangeValue">16</p>
+            <input type="range" min="8" max="64" value="16" step="1" id="rangeSizeSelector">
+            <button id="rangeSizeSelectorButton">Apply</button>
+        </div>       
     </div>
 </body>
 </html>
